fixed missing background in static mode

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   width : 100%;
   height : 100vh;
   position : fixed;
-  background : url('../imageimages/background.jpg');
+  background : url('../assets/images/background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
